feat: CRUD for Persons
