# src/main/resources/openapi/OPENAPI-SAMPLE-STRUCTURE-PERSON.yaml
@@ -110,6 +110,73 @@ paths:
       responses:
         200:
           $ref: '#/components/responses/PersonReadResponse'
+    put:
+      tags:
+        - Person
+      summary: Update person
+      security:
+        - BearerAuth: []
+        - OauthSecurityUser:
+            - write
+            - read
+      description: |
+        
+        ## Responsibilities
+        Update one specific person
+
+        ---
+        ## Requirements
+        To access this endpoint, you must have one of the following sets of roles:
+           * `AUTH-BASIC` level
+
+      operationId: updatePersonById
+      parameters:
+        - in: path
+          name: personId
+          required: true
+          example: "67fe6bac382b9445e80b404e"
+          schema:
+            type: string
+      requestBody:
+        description: Person Data
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/PersonRequestBody'
+      responses:
+        200:
+          $ref: '#/components/responses/PersonUpdateResponse'
+    delete:
+      tags:
+        - Person
+      summary: Delete person
+      security:
+        - BearerAuth: []
+        - OauthSecurityUser:
+            - write
+            - read
+      description: |
+        
+        ## Responsibilities
+        Delete one specific person
+
+        ---
+        ## Requirements
+        To access this endpoint, you must have one of the following sets of roles:
+           * `AUTH-BASIC` level
+
+      operationId: deletePersonById
+      parameters:
+        - in: path
+          name: personId
+          required: true
+          example: "67fe6bac382b9445e80b404e"
+          schema:
+            type: string
+      responses:
+        204:
+          description: Person deleted successfully
+          content: {}
 
 components:
   securitySchemes:
